[package]
name = "radeoncl-grep"
version = "0.1.0"
authors = ["Marcel Guzik <mguzik555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.7"
tokio = { version = "0.2.22", features = ["macros"] }
