[package]
name = "radeoncl-grep"
version = "0.1.0"
authors = ["Marcel Guzik <mguzik555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.7"
tokio = { version = "0.2.22", features = ["macros"] }
chrono = "0.4.15"
scraper = "0.12.0"
html2text = "0.1.14"
regex = "1.3.9"
